<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_image_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_glucometer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_text_title"
        android:layout_marginBottom="50dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_text_title"
        android:text="@string/title_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_guideline_middle"
        style="@style/textview_title_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_text_subtitle"
        android:text="@string/subtitle_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_guideline_middle"
        style="@style/text_subtitle_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button_getstarted"
        android:text="@string/get_started"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_subtitle"
        style="@style/button_enabled"
        android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button_singin"
        android:text="@string/already_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button_getstarted"
        style="@style/button_transparent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>