<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.create.CreateUserFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/createuser_image_back"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/image_back_button"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/createuser_text_title"
        android:text="@string/create_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createuser_image_back"
        style="@style/text_top_primary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createuser_input_layout_first_name"
        android:hint="@string/first_name"
        app:hintEnabled="true"
        app:hintTextColor="@color/darkGrey"
        app:boxBackgroundColor="@color/transparent"
        app:boxStrokeWidth="0.3dp"
        app:boxStrokeColor="@color/lightGrey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createuser_text_title"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createuser_input_first_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createuser_input_layout_email"
        android:hint="@string/email"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:hintTextColor="@color/darkGrey"
        app:boxStrokeWidth="0.3dp"
        app:boxBackgroundColor="@color/transparent"
        app:boxStrokeColor="@color/lightGrey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createuser_input_layout_first_name"
        style="@style/text_input_layout"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createuser_input_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createuser_input_layout_password"
        android:hint="@string/senha"
        app:hintEnabled="true"
        app:hintTextColor="@color/darkGrey"
        app:boxBackgroundColor="@color/transparent"
        app:boxStrokeColor="@color/lightGrey"
        app:boxStrokeWidth="0.3dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createuser_input_layout_email"
        style="@style/text_input_layout"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createuser_input_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createuser_button_create"
        android:text="@string/create_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        style="@style/button_enabled" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createuser_button_sign_google"
        android:text="@string/continue_with_google"
        style="@style/button_google"
        android:textAlignment="center"
        android:drawablePadding="2dip"
        android:paddingStart="30dip"
        android:paddingEnd="26dip"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/createuser_button_create"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>